--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Alexei Suzdalenko Web Android Developer
-Theme URI:https://suzdalenko.com
+Theme Name:  Studio
+Theme URI:https://Google.com
 Author:WowThemes.net
-Author URI:https://suzdalenko.com
+Author URI:https://Google.com
 Description:Minimalist Portfolio & Ecommerce HTML Template
 Version:1.0.0
 Personal License: Free for personal use
-Commercial License: Buy it here-> https://suzdalenko.com
+Commercial License: Buy it here-> https://Google.com
 Tags:white,light,one-column,two-columns,left-sidebar,right-sidebar,fluid-layout,custom-header,custom-menu,custom-colors,editor-style,featured-image-header,full-width-template,post-formats,theme-options,featured-images,translation-ready
 */
 @font-face {
